--- a/Android/OntworteldeBoom/app/src/main/res/values/strings.xml
+++ b/Android/OntworteldeBoom/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -39,8 +38,8 @@
     <string name="discoverable">Make discoverable</string>
 
     <string name="action_settings">Settings</string>
-    <string name="about_text"><![CDATA[This App controls The Uprooted Tree version 2.0 with
-        2 pumps and 3 sensors.
+    <string name="about"><![CDATA[This App controls The Uprooted Tree version 2.0 with
+        2 pumps and 3 sensors.<p>
         It only works with a dedicated Arduino Program, written by the auteur.<p>
         &#169; 2013 by Jeff Friesen for the about screen.<br>
         &#169; 2016 by BHJ Drahmann for the app.<br>
@@ -57,7 +56,7 @@
     <string name="close">Close</string>
     <string name="menu_about">About</string>
 
-
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
-
